--- a/web/package.json
+++ b/web/package.json
@@ -10,5 +10,12 @@
 		"less": "^4.1.3",
 		"less-loader": "^11.0.0",
 		"nuxt": "3.0.0-rc.6"
+	},
+	"dependencies": {
+		"@vuelidate/core": "^2.0.0-alpha.44",
+		"@vuelidate/validators": "^2.0.0-alpha.31",
+		"primeflex": "^3.2.1",
+		"primeicons": "^5.0.0",
+		"primevue": "^3.16.0"
 	}
 }
