--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@vuelidate/core": "^2.0.0-alpha.44",
 		"@vuelidate/validators": "^2.0.0-alpha.31",
+		"chart.js": "^3.9.1",
 		"primeflex": "^3.2.1",
 		"primeicons": "^5.0.0",
 		"primevue": "^3.16.0"
