--- a/web/package.json
+++ b/web/package.json
@@ -1,22 +1,17 @@
 {
-	"private": true,
-	"scripts": {
-		"build": "nuxt build",
-		"dev": "nuxt dev",
-		"generate": "nuxt generate",
-		"preview": "nuxt preview"
-	},
-	"devDependencies": {
-		"less": "^4.1.3",
-		"less-loader": "^11.0.0",
-		"nuxt": "3.0.0-rc.6"
-	},
-	"dependencies": {
-		"@vuelidate/core": "^2.0.0-alpha.44",
-		"@vuelidate/validators": "^2.0.0-alpha.31",
-		"chart.js": "^3.9.1",
-		"primeflex": "^3.2.1",
-		"primeicons": "^5.0.0",
-		"primevue": "^3.16.0"
-	}
+  "private": true,
+  "scripts": {
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^5.3.2",
+    "nuxt": "3.0.0-rc.8",
+    "unplugin-vue-components": "^0.22.4"
+  },
+  "dependencies": {
+    "ant-design-vue": "3.0.0-beta.8"
+  }
 }
