--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,11 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "ant-design-vue": "^1.7.8",
+    "babel-plugin-import": "^1.13.5",
+    "cookieparser": "^0.1.0",
     "core-js": "^3.19.3",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "less": "^4.1.3",
     "less-loader": "^6.2.0",
     "nuxt": "^2.15.8",
